force-app/main/default/objects/Training_Events__c/fields/Service_Delivery_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Territory__c</fullName>
    <label>Service Delivery Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Mid-West</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Keystone</fullName>
            </value>
            <value>
                <fullName>Lone Star</fullName>
            </value>
            <value>
                <fullName>Mid-Atlantic</fullName>
            </value>
            <value>
                <fullName>Mid-South</fullName>
            </value>
            <value>
                <fullName>New England</fullName>
            </value>
            <value>
                <fullName>NY Metro</fullName>
            </value>
            <value>
                <fullName>Pacific Northwest</fullName>
            </value>
            <value>
                <fullName>Pacific South</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>Upper Mid-West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>