force-app/main/default/objects/Training_Events__c/fields/Skills_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Skills_Evaluation__c</fullName>
    <label>Skills Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Examiners</fullName>
            </value>
            <value>
                <fullName>Facility Managers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>