force-app/main/default/objects/Training_Events__c/fields/Supp_Info__c.field-meta.xml
<CustomField>
    <fullName>Supp_Info__c</fullName>
    <inlineHelpText>For Accounts that require Supplemental Information to be included on their Invoice, provide details here.</inlineHelpText>
    <label>Supp Info</label>
    <length>50</length>
    <type>Text</type>
</CustomField>