force-app/main/default/objects/Training_Events__c/fields/TE_Owner__c.field-meta.xml
<CustomField>
    <fullName>TE_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field for the owner of the Training Event. It will be used to connect the other TE Owner-related fields, such as TE Owner Email, TE Owner Phone, etc.</description>
    <label>TE Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Event</relationshipName>
    <type>Lookup</type>
</CustomField>