force-app/main/default/objects/Training_Events__c/fields/TE_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>TE_Owner_Email__c</fullName>
    <formula>TE_Owner__r.Email</formula>
    <label>TE Owner Email</label>
    <type>Text</type>
</CustomField>