force-app/main/default/objects/Training_Events__c/fields/TE_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>TE_Owner_Manager__c</fullName>
    <formula>TE_Owner__r.Manager_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TE Owner Manager</label>
    <type>Text</type>
</CustomField>