force-app/main/default/objects/Training_Events__c/fields/TE_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>TE_Owner_Phone__c</fullName>
    <formula>TE_Owner__r.Phone</formula>
    <label>TE Owner Phone</label>
    <type>Text</type>
</CustomField>