force-app/main/default/objects/Training_Events__c/fields/TE_Owner_Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>TE_Owner_Phone_Ext__c</fullName>
    <formula>TE_Owner__r.Extension</formula>
    <label>TE Owner Phone Ext</label>
    <type>Text</type>
</CustomField>