force-app/main/default/objects/Training_Events__c/fields/TE_Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>TE_Owner_Title__c</fullName>
    <formula>TE_Owner__r.Title</formula>
    <label>TE Owner Title</label>
    <type>Text</type>
</CustomField>