force-app/main/default/objects/Training_Events__c/fields/Times_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Times_Rescheduled__c</fullName>
    <label>Times Rescheduled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>