force-app/main/default/objects/Training_Events__c/fields/Training_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Training_Address_1__c</fullName>
    <label>Training Address 1</label>
    <length>75</length>
    <type>Text</type>
</CustomField>