force-app/main/default/objects/Training_Events__c/fields/Training_City__c.field-meta.xml
<CustomField>
    <fullName>Training_City__c</fullName>
    <label>Training City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>