force-app/main/default/objects/Training_Events__c/fields/Training_Contact__c.field-meta.xml
<CustomField>
    <fullName>Training_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Event</relationshipLabel>
    <relationshipName>Training_Event</relationshipName>
    <type>Lookup</type>
</CustomField>