force-app/main/default/objects/Training_Events__c/fields/Training_Contact_email__c.field-meta.xml
<CustomField>
    <fullName>Training_Contact_email__c</fullName>
    <formula>Training_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Contact email</label>
    <type>Text</type>
</CustomField>