force-app/main/default/objects/Training_Events__c/fields/Training_Contact_Office_Ext__c.field-meta.xml
<CustomField>
    <fullName>Training_Contact_Office_Ext__c</fullName>
    <formula>Training_Contact__r.Extension__c</formula>
    <label>Training Contact Office Ext</label>
    <type>Text</type>
</CustomField>