force-app/main/default/objects/Training_Events__c/fields/Training_Contact_Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>Training_Contact_Office_Phone__c</fullName>
    <formula>Training_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Contact Office Phone</label>
    <type>Text</type>
</CustomField>