force-app/main/default/objects/Training_Events__c/fields/Training_Event_Age__c.field-meta.xml
<CustomField>
    <fullName>Training_Event_Age__c</fullName>
    <formula>IF(
 OR(
  ISPICKVAL(Scheduling_Status__c, &quot;Contacting&quot;),
  ISPICKVAL(Scheduling_Status__c, &quot;In Discussion - Customer Hold&quot;),
  ISPICKVAL(Scheduling_Status__c, &quot;In Discussion - Scheduling&quot;),
  ISPICKVAL(Scheduling_Status__c, &quot;Sent Addendum&quot;),
  ISPICKVAL(Scheduling_Status__c, &quot;Rescheduling&quot;)
),
 (NOW()- CreatedDate)*24,
 (Completed_Date__c -    Opportunity__r.Closed_Won_Date__c  )*24 
)</formula>
    <inlineHelpText>The field calculates the time duration in Hours.</inlineHelpText>
    <label>Training Event Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>