force-app/main/default/objects/Training_Events__c/fields/Training_Event_Age_Detail__c.field-meta.xml
<CustomField>
    <fullName>Training_Event_Age_Detail__c</fullName>
    <formula>TEXT( FLOOR( Training_Event_Age__c/24 ) ) + &#39; Days &#39; + 
TEXT( FLOOR(MOD((Training_Event_Age__c)/24 *1440,1440)/60 )) + &#39; Hours &#39; + 
TEXT( ROUND(MOD( MOD((Training_Event_Age__c)/24 * 1440, 1440), 60),0) ) + &#39; Min&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Event Age Detail</label>
    <type>Text</type>
</CustomField>