force-app/main/default/objects/Training_Events__c/fields/Training_Location__c.field-meta.xml
<CustomField>
    <fullName>Training_Location__c</fullName>
    <inlineHelpText>Training Location</inlineHelpText>
    <label>Training Location</label>
    <type>TextArea</type>
</CustomField>