force-app/main/default/objects/Training_Events__c/fields/Training_Office_Title__c.field-meta.xml
<CustomField>
    <fullName>Training_Office_Title__c</fullName>
    <formula>Training_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>