force-app/main/default/objects/Training_Events__c/fields/Training_Zip__c.field-meta.xml
<CustomField>
    <fullName>Training_Zip__c</fullName>
    <label>Training Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>