force-app/main/default/objects/Training_Events__c/fields/Void_Reason__c.field-meta.xml
<CustomField>
    <fullName>Void_Reason__c</fullName>
    <label>Void Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Scheduling_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Created in Error</fullName>
            </value>
            <value>
                <fullName>Customer Declined</fullName>
            </value>
            <value>
                <fullName>Incorrect Product</fullName>
            </value>
            <value>
                <fullName>Returned to Sales</fullName>
            </value>
            <value>
                <fullName>Returned to Sales - Reschedule</fullName>
            </value>
            <value>
                <fullName>Pre-Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>