force-app/main/default/objects/Training_Events__c/fields/Voucher_Created__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voucher Created</label>
    <type>Checkbox</type>
</CustomField>