force-app/main/default/objects/Training_Events__c/fields/Written_Test__c.field-meta.xml
<CustomField>
    <fullName>Written_Test__c</fullName>
    <label>Written Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>