force-app/main/default/objects/Training_Events__c/recordTypes/Training_Event.recordType-meta.xml
<RecordType>
    <fullName>Training_Event</fullName>
    <active>true</active>
    <label>Training Event</label>
</RecordType>