force-app/main/default/objects/Training_Events__c/validationRules/Opportunity_Type_NoContract_Upsell_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Type_NoContract_Upsell_Check</fullName>
    <active>false</active>
    <description>If opportunity  Type is Contract/No Upsell, Business Account is required</description>
    <errorConditionFormula>AND
(ISPICKVAL( Opportunity__r.Type ,&quot;No Contract/Upsell&quot;),
ISBLANK(Billing_Account__c)
)</errorConditionFormula>
    <errorDisplayField>Billing_Account__c</errorDisplayField>
    <errorMessage>Billing Account is required for opportunity type &quot;No Contract/Upsell&quot;</errorMessage>
</ValidationRule>